test/cases/unused_labels.1.zig
comptime {
    foo: while (true) {}
}

// error
//
// :2:5: error: unused while loop label
